@@ -16,6 +16,7 @@
   * C parser now handles Document-method better.  Bug #27329.
   * RDoc::Markup::AttributeManager no longer uses global state.
   * ri will use the RI_PAGER environment variable to find a pager.
+  * RDoc::RDoc no longer passes around options.  Patch #27167.
 
 * N Bug Fixes
   * The :attr: directives now use the name given to create an attribute.  See
